--- a/src/Client/WelcomeClient.css
+++ b/src/Client/WelcomeClient.css
@@ -1,4 +1,4 @@
 .WelcomeClient {
   align-items: center;
-  background-image: url(../images/Page6.jpg);
+  background-image: url(../images/Other.png);
 }
