--- a/src/Administrator/Welcome.css
+++ b/src/Administrator/Welcome.css
@@ -1,5 +1,5 @@
 .WelcomePage {
     align-items: center;
     /*justify-content: center;*/
-    background-image: url(../images/final.png);
+    background: linear-gradient(#1aa338,#ed7a1b, #ffc000, #0084ff);
 }
