Cambio color y palabras al español

--- a/src/Administrator/Teaching.css
+++ b/src/Administrator/Teaching.css
@@ -1,4 +1,4 @@
 .Teaching {
     text-align: center;
-    background-image: url(../images/Other.png);
+    background: linear-gradient(#0084ff,#1aa338);
 }
