Cambio color y palabras al español

--- a/src/Administrator/Learning.css
+++ b/src/Administrator/Learning.css
@@ -1,4 +1,4 @@
 .Learning {
     text-align: center;
-    background-image: url(../images/Portada.jpg);
+    background: linear-gradient(#ed7a1b, #ffc000);
 }
