--- a/src/Administrator/Country.css
+++ b/src/Administrator/Country.css
@@ -1,6 +1,6 @@
 .Country {
     text-align: center;
-    background-image: url(../images/Fondo.png);
+    background: linear-gradient(#ed7a1b,#0084ff);
     background-size: cover;
 }
 
