--- a/src/Client/Consulta4Page.css
+++ b/src/Client/Consulta4Page.css
@@ -1,4 +1,4 @@
 .Consulta4Page {
     text-align: center;
-    background: linear-gradient(#fdbb2d, #65ff93, #00d4ff, #eeaeca);
+    background: linear-gradient(#fdbb2d, #00d4ff);
 }
