--- a/src/Client/Consulta2Page.css
+++ b/src/Client/Consulta2Page.css
@@ -1,4 +1,4 @@
 .Consulta2Page {
     text-align: center;
-    background: linear-gradient(#22c1c3, #fdbb2d);
+    background: linear-gradient(#fdbb2d, #65ff93);
 }
